--- a/user-details.html
+++ b/user-details.html
@@ -6,9 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>User details</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div id="wrap-detail" class="wrapper"></div>
+<div id="wrap-detail" class="wrapper wrapper-user"></div>
 
 <script src="js/detail.js"></script>
 </body>
