mini-project refactoring 2 added animation:)

--- a/user-details.html
+++ b/user-details.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div id="wrap-detail" class="wrapper wrapper-user"></div>
+
+
+<div id="wrap-detail" class="wrapper wrapper-user">
+    <header id="head" class="header"></header>
+</div>
 
 <script src="js/detail.js"></script>
 </body>
