--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 
-<div id="wrap" class="wrapper"></div>
+<div id="wrap" class="wrapper wrapper-index">
+    <header id="head" class="header"></header>
+</div>
 
 <script src="js/main.js"></script>
 </body>
