--- a/post-details.html
+++ b/post-details.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div id="wrap-detail-post" class="wrapper wrapper-post"></div>
+
+
+<div id="wrap-detail-post" class="wrapper wrapper-post">
+    <header id="head" class="header"></header>
+</div>
 
 <script src="js/post.js"></script>
 </body>
