mini-project refactoring 2 added animation:)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div id="wrap" class="wrapper wrapper-index">
+<div id="wrap" class="wrapper wrapper-index user-animation">
     <header id="head" class="header"></header>
 </div>
 
