mini-project refactoring :)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
 
 <div id="wrap" class="wrapper wrapper-index user-animation">
-    <header id="head" class="header"></header>
+    <header id="head" class="header">
+        <h2 class="header__title">List of users</h2>
+    </header>
 </div>
-
+<footer class="foot">Ніяких прав нема, нічого не захищено...</footer>
 <script src="js/main.js"></script>
 </body>
 </html>
