--- a/post-details.html
+++ b/post-details.html
@@ -11,9 +11,15 @@
 <body>
 
 <div id="wrap-detail-post" class="wrapper wrapper-post">
-    <header id="head" class="header"></header>
+    <header id="head" class="header">
+        <a id="back-btn" class="header__back-btn">BACK</a>
+        <h2 class="header__title">Post</h2>
+    </header>
+    <div id="details-post" class="details-post"></div>
+    <h2 class="header__title">COMMENTS</h2>
+    <div id="block-comments" class="block-comments"></div>
 </div>
-
+<footer class="foot">Ніяких прав нема, нічого не захищено...</footer>
 <script src="js/post.js"></script>
 </body>
 </html>
