--- a/user-details.html
+++ b/user-details.html
@@ -12,9 +12,14 @@
 
 
 <div id="wrap-detail" class="wrapper wrapper-user">
-    <header id="head" class="header"></header>
+    <header id="head" class="header">
+        <a href="index.html" class="header__back-btn">BACK</a>
+        <h2 class="header__title">User detail</h2>
+    </header>
+    <div id="details-user" class="details-user"></div>
+    <div id="btn-open-list" class="btn-open-titles">post of current user</div>
 </div>
-
+<footer class="foot">Ніяких прав нема, нічого не захищено...</footer>
 <script src="js/detail.js"></script>
 </body>
 </html>
